# fastapi-tdd-docker

./: docker-compose.yml
project/: Dockerfile  pyproject.toml
project/app/: db.py
