[tool.poetry]
name = "fastapi-tdd-docker"
version = "0.1.0"
description = ""
authors = ["Austen Wood <50690066+austenwood@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_tdd_docker"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
tortoise-orm = "^0.19.3"
aerich = "^0.7.1"



[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
